--- a/sspa-report/pom.xml
+++ b/sspa-report/pom.xml
@@ -70,7 +70,10 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.8.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-envers</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
